// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render JsDoc tags 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Parameters
      </th>
      <th
        className=""
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          name="Foo()"
        />
      </td>
      <td>
        <Styled(Arguments)
          args={Array []}
        />
      </td>
      <td
        className=""
      >
        <JsDoc
          since={
            Array [
              Object {
                "description": "1.0.0",
                "title": "since",
              },
            ]
          }
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render deprecated JsDoc tags 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Parameters
      </th>
      <th
        className=""
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={
            Array [
              Object {
                "description": "Use *another* method",
                "title": "description",
              },
            ]
          }
          name="Foo()"
        />
      </td>
      <td>
        <Styled(Arguments)
          args={Array []}
        />
      </td>
      <td
        className=""
      >
        <JsDoc
          deprecated={
            Array [
              Object {
                "description": "Use *another* method",
                "title": "description",
              },
            ]
          }
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render parameters 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Parameters
      </th>
      <th
        className=""
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          name="method()"
        />
      </td>
      <td>
        <Styled(Arguments)
          args={
            Array [
              Object {
                "description": "Description",
                "name": "value",
                "optional": undefined,
                "type": Object {
                  "name": "Number",
                },
              },
            ]
          }
        />
      </td>
      <td
        className=""
      >
        <Styled(Markdown)
          text="Public"
        />
        <JsDoc />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render public method 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Parameters
      </th>
      <th
        className=""
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          name="method()"
        />
      </td>
      <td>
        <Styled(Arguments)
          args={Array []}
        />
      </td>
      <td
        className=""
      >
        <Styled(Markdown)
          text="Public"
        />
        <JsDoc />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render returns 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Parameters
      </th>
      <th
        className=""
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          name="method()"
        />
      </td>
      <td>
        <Styled(Arguments)
          args={Array []}
        />
      </td>
      <td
        className=""
      >
        <Styled(Argument)
          description="Description"
          returns={true}
          type={
            Object {
              "name": "Number",
            }
          }
        />
        <JsDoc />
      </td>
    </tr>
  </tbody>
</table>
`;
